wsgi/shadowcon/shadowcon/static/css/base.css
article, aside, details, figcaption, figure, footer, header,
hgroup, nav, section {
    display: block;
}

body {
    background-color: #000000;
    color:#FFFFFF;
    font-family: 'Special Elite', cursive;
    line-height:normal;
    margin:0px 8px 8px 8px;
    font-size:16px;
}

a, a:focus, a:hover {
    color:#FFFFFF;
    text-decoration:underline;
}

a:focus, a:hover, h1, h2, h3 {
    font-weight:bold;
}

.schedule th {
    padding:5px 0px 0px 2px;
}

.schedule td {
    padding:5px 10px 2px 10px;
}

.radio td, .radio th {
    padding-bottom:4px;
}

.radio .header {
    padding:0px 10px 0px 0px;
}

.submit {
    margin-top:10px;
    color:black;
    padding-top:4px;
}

.submit:hover {
    background-color:rgb(190,190,190);
}

.radio label {
    padding-left:0px;
}

.errorlist {
    color:red;
}

select, input, textarea {
    color:black;
}

p label, th label {
    font-weight:normal;
}

table .radio {
    display:table-row;
}

input.submit {
    font-size:14px;
}

h2 {
    font-size:24px;
}

h3 {
    font-size:18.72px;
}

p, form {
    margin:16px 0px 16px 0px;
}

/* Header */

div#head_and_nav {
    background-image:url('../img/header.jpg');
    background-position:right;
    background-size:960px 177px;
    background-repeat:no-repeat;

    width:100%;
    height:177px;
    box-sizing:content-box;
}

header h1 {
    font-size:60px;
    position:relative;
    margin:0px;
    top:15px;
    left:15px;
}

header p {
    position:relative;
    top:-5px;
    left:60px;
    margin:14px 0px 14px 0px;
}


/* Nav Bar */
nav {
    height:45px;
}

nav ul {
    font-size:25px;
    margin: 0;
    padding: 0;
    list-style: none;
}

nav ul li {
    display: block;
    position: relative;
    float: left;
}

nav li ul { 
    display: none; 
}

nav ul li a {
    display: block;
    text-decoration: none;
    padding: 12px 20px 1px 20px;

    background-color:#000000; 
    margin-left: 5px;
    white-space: nowrap;
    height:30px; /* Width and height of top-level nav items */
    text-align:center;
    border:3px solid #4B4B4B; 
    border-radius: 20px; 
    overflow:hidden;
    box-sizing:content-box;
}

nav ul li a:hover { 
    background: #A15720;
}

nav li:hover ul {
    z-index:10;
    display: block;
    position: absolute;
    height:30px;
}

nav li:hover li {
    float: none;
    font-size: 11px;
    
}

nav li:hover a { 
    padding: 12px 20px 1px 20px;
    background: #2b1d12;
}

nav ul li ul li a {
    height:20px;
    text-align:left;
}

nav a:focus, nav a:hover {
    text-decoration:none;
}



/* Middle Container */
div#container {
    width:960px;
    margin:auto;
    margin-top:0px;
}

/* Main Content */
section#main {
    padding-left:25px;
    padding-right:25px;
    margin-bottom:20px;
}

/* Side bar */
aside {
    margin:16px 0px 20px 0px;
}

aside ul {
    list-style: none;
    margin:10px;
    padding:0px;
}

aside a {
    font-size:18px;
}

aside li {
    padding:0px 0px 10px 0px;
}

aside h3 {
    margin:0px;
    margin-top:20px;
    margin-bottom:5px;
}

aside ul {
    list-style: none;
    margin:0px;
    padding:0px;
    padding-bottom:5px;
}

aside li#deadlines ul li {
    margin:0px;
    margin-left:10px;
    padding:0px;
    padding-left:10px;
}

aside li#registration_opens ul {
    margin:0px;
    margin-left:10px;
    padding:0px;
    padding-left:10px;
}

aside li#registration_opens ul li {
    padding:0px;
}

aside li#costs h3 {
    margin-top:10px;
}


aside li#costs ul li {
    margin:0px;
    margin-left:10px;
    margin-bottom:5px;
    padding:0px;
    padding-left:10px;
}

/* Footer */
footer {
    background-color: #000000;
    clear:both;
    height:27px;
}

footer a {
    position:relative;
    top:5px;
    left:15px;
    font-size:12px;
}

.nav-tabs>li.active>a, .nav-tabs>li>a:focus {
/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#2b1d12+50,19110a+75,000000+100 */
  background: #2b1d12; /* Old browsers */
  background: -moz-linear-gradient(top,  #2b1d12 50%, #19110a 75%, #000000 100%); /* FF3.6-15 */
  background: -webkit-linear-gradient(top,  #2b1d12 50%,#19110a 75%,#000000 100%); /* Chrome10-25,Safari5.1-6 */
  background: linear-gradient(to bottom,  #2b1d12 50%,#19110a 75%,#000000 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2b1d12', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
}

.nav-tabs>li>a:hover  {
  background-color:#A15720 !important;
}

.nav-tabs>li>a {
  color:white !important;
  text-decoration: none;
}

